deleted old images,fixed searchresults page spacing

--- a/WatchParty/client/src/components/Header/SearchResults.css
+++ b/WatchParty/client/src/components/Header/SearchResults.css
@@ -4,7 +4,7 @@
     margin-top: 10px;
     margin-bottom: 10px;
     text-align: center;
-    padding-top: 80px;
+    padding-top: 10px;
     padding-bottom: 10px;
 }
 
